added safari top theme color

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Roboto&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="./style/style.css" />
+    <meta name="theme-color" content="#9FA5B9">
     <title>Array Simulator</title>
   </head>
   <body>
