fixed splice bug where user could not delete one element using splice

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Roboto&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="./style/style.css" />
     <meta name="theme-color" content="#9FA5B9">
+    <link rel="shortcut icon" href="./images/Array Similator Favicon.png" type="image/x-icon">
     <title>Array Simulator</title>
   </head>
   <body>
