added jr to title

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <link rel="stylesheet" href="./style/style.css" />
     <meta name="theme-color" content="#9FA5B9">
     <link rel="shortcut icon" href="./images/Array Similator Favicon.png" type="image/x-icon">
-    <title>Array Simulator</title>
+    <title>Array Simulator Jr.</title>
   </head>
   <body>
     <section id="main-page">
       <div class="title-container">
-        <h1 class="app-title">Array Simulator</h1>
+        <h1 class="app-title">Array Simulator Jr.</h1>
         
       </div>
      
